BusOne/src/objects/EM_Event_Session_vod__c.object
<CustomObject>
    <description>Sessions at events for Veeva Event Management.</description>
    <fields>
        <fullName>End_Time_vod__c</fullName>
        <description>End time of an event session.</description>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Event for which the session is a part of.</description>
        <label>Event</label>
        <referenceTo>EM_Event_vod__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>EM_Event_Session_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>KOL_External_Id_vod__c</fullName>
        <description>External Id used for KOL data loads only.</description>
        <label>KOL External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_vod__c</fullName>
        <description>Location of an event session.</description>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>Field used by mobile products for synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Override_Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Helper field for data loads.</description>
        <label>Override Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Session_Title_vod__c</fullName>
        <description>Title of an event session</description>
        <label>Session Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Type_vod__c</fullName>
        <description>Type of an event session</description>
        <label>Session Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>KOL_Session_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sponsor_vod__c</fullName>
        <description>Sponsor of an event session</description>
        <label>Sponsor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time_vod__c</fullName>
        <description>Start time of an event session.</description>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <label>Event Session</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Sessions</pluralLabel>
    <recordTypes>
        <fullName>Event_Session_vod</fullName>
        <active>true</active>
        <description>Event Session</description>
        <label>Event_Session_vod</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Event_Team_Member_vod__c</fullName>
        <label>Event Team Member</label>
    </sharingReasons>
</CustomObject>